src/pydjinni/generator/java/it/java/error/expected/java/test/error/BarError.java
// AUTOGENERATED FILE - DO NOT MODIFY!
// This file was generated by PyDjinni from 'error.pydjinni'
package test.error;

/**
 * @deprecated error domain is old
 */
@Deprecated
public abstract class BarError extends Exception {
    public BarError(String message) {
        super(message);
    }
    /**
     * @deprecated error code is old
     */
    @Deprecated
    public final static class OldErrorCode extends BarError {
        public OldErrorCode(
        ) {
            this(null);
        }

        public OldErrorCode(
            String message
        ) {
            super(message);
        }

    }
}
